test/samples/error/err_incompatible_op_logical.w
var x = (2 > 1) && 1